syntax = "proto3";

package baetyl;

// The function server definition.
service Function {
  rpc Call(FunctionMessage) returns (FunctionMessage) {}
  // rpc Talk(stream Message) returns (stream Message) {}
}

// FunctionMessage function message
message FunctionMessage {
  uint64 ID                 = 1;
  uint32 QOS                = 2;
  string Topic              = 3;
  bytes  Payload            = 4;

  sint64  Timestamp         = 10;
  string  FunctionName      = 11;
  string  FunctionInvokeID  = 12;
}
